--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles.css" />
+    <title>Modern CSS</title>
+  </head>
+  <body>
+    <div class="box">
+      <h1>CSS Variabbles</h1>
+      <button>Click Me</button>
+    </div>
+  </body>
+</html>
