add root variables with media queries for sizing

--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
     <title>Modern CSS</title>
   </head>
   <body>
-    <div class="box">
-      <h1>CSS Variabbles</h1>
-      <button>Click Me</button>
-    </div>
+    <button>click me</button>
   </body>
 </html>
