--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Modern CSS</title>
   </head>
   <body>
-    <button>click me</button>
+    <h1>calc()</h1>
+    <div class="box1"></div>
+    <div class="box2"></div>
   </body>
 </html>
