--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   </head>
   <body>
     <h1>calc()</h1>
-    <div class="box1"></div>
-    <div class="box2"></div>
+    <div class="box1"><div class="box2"></div></div>
   </body>
 </html>
